--- a/Javascript-learning/JavaScript高级程序设计第四版/第3章 语言基础.md
+++ b/Javascript-learning/JavaScript高级程序设计第四版/第3章 语言基础.md
@@ -1,1 +1,118 @@
 # 第3章 语言基础
+
+- parseInt 和 parseFloat 遇到无法转换的字符就停止，返回转换完成的部分。如果没有可转换部分则返回 NaN
+- parseInt 第二个参数为底数，parseFloat 只解析十进制，因此传入其它进制返回 0
+- 数值类型的 toString 方法接收参数作为转换的底数。
+
+- 类似于Object.getOwnPropertyNames()返回对象实例的常规属性数组，Object.getOwnProperty-Symbols()返回对象实例的符号属性数组。这两个方法的返回值彼此互斥。Object.getOwnProperty-Descriptors()会返回同时包含常规和符号属性描述符的对象。Reflect.ownKeys()会返回两种类型的键
+
+
+### Symbol
+- `Symbol.iterator`: `for of` 使用
+- `Symbol.asyncIterator`:  `for await of` 会使用该 symbol
+- `Symbol.hasInstance`: `instanceof` 操作符会使用 `Symbol.hasInstance` 函数来确定关系
+- `Symbol.isConcatSpreadable`: concat 是否强制打平该数组
+- `Symbol.match`: `String.prototype.match()` 方法使用
+- `Symbol.replace`: 由 `String.prototype.replace()` 方法使用
+- `Symbol.search`: 由 `String.prototype.search()` 方法使用
+- `Symbol.species`: ??? 暂时没懂
+- `Symbol.split`: 由 `String.prototype.split()` 方法使用
+- `Symbol.toPrimitive`: 转换为原始值，很多情况下需要转换为原始值，如 bar 是一个对象，但是如果转换为数字它的值是 3，转换为字符串它的值是 `hello`，那么执行 `1 + bar = 4` 或者 `String(bar)` 为 `hello`;
+- `Symbol.toStringTag`: 更详细的对象描述性字符串
+- `Symbol.unscopables`: 解除 `with` 绑定
+
+### 语句
+
+- `for-in`: 用于枚举对象中的**非symbol**键属性
+- `for-of`: 用于遍历**可迭代对象**的元素，会根据可迭代对象的 `next()` 返回数据，如果对象不可迭代则会抛出错误。
+
+
+### Regexp
+
+- `y`: 粘滞标记，它表示每次需要从 lastIndex 处开始查找，包含 lastIndex 上的元素，如果不匹配则返回 null
+
+
+Regexp 构造函数属性，这些会在调用 `exec()` 或者 `test()` 的时候被填充到构造函数对应属性中：
+
+|全称|简写|说明|
+|----|----|----|
+|`input`|`$_`|最后搜索的字符串|
+|`lastMatch`|`$&`|最后匹配的文本|
+|`lastParen`|`$+`|最后匹配的捕获组|
+|`leftContext`|$`|input 字符串中出现在 lastMatch 之前的文本|
+|`rightContext`|`$'`|input 字符串中出现在 lastMatch 之后的文本|
+|`$1~$9`|捕获组|
+
+### 原始值包装类型
+
+以读模式访问原始值时，后台会实例化一个原始值包装类型的对象，借助这个对象可以操作相应的数据。涉及原始值的语句执行完毕后，包装对象就会被销毁。
+
+- `Object` 构造函数作为一个工厂方法，能够根据传入值的类型返回相应原始值包装类型的实例
+
+- `toFixed()` 方法返回包含指定小数点位数的数值字符串
+- `toExponential()` 返回以科学记数法（也称为指数记数法）表示的数值字符串
+- `toPrecision()` 会根据情况返回最合理的输出结果。方法会根据数值和精度来决定调用 toFixed() 还是 toExponential()
+
+### 集合引用类型
+
+#### Array
+
+- `Array.from()` 可接手 3 个参数，第二个参数为转换函数，第三个参数为 this 绑定。
+- `Array.of()` 可以把一组参数转换为数组。这个方法用于替代在ES6之前常用的 `Array.prototype. slice.call(arguments)`
+
+
+#### 6.3 定型数组  TypedArray
+
+历史原因：参考 《JavaScript 高级程序设计·第四版》6.3.1 章节。
+
+TypedArray 基于 `ArrayBuffer`，不过`ArrayBuffer`一经创建就不能再调整大小。可以把它当做是纯粹的内存，和类型无关。它的单位是字节：
+
+```js
+const buf = new ArrayBuffer(2); // 相当于在内存中分配 2 个字节的大小空间
+console.log(buf.byteLength) // 2
+```
+
+`ArrayBuffer` 是不能直接读写的，需要通过上层视图，最基本的视图就是 `DataView`，可以把它当做类型无关的内存读取器，它需要使用 ArrayBuffer 作为参数，DataView操作的单位也是字节：
+
+```js
+const buf = new ArrayBuffer(16)
+const view = new DataView(buf)
+
+console.log(
+  view.byteLength,  // 16
+  view.byteOffset,  // 0
+  view.buffer === buf,  // true
+  
+  )
+
+view.setUint8(0, 255)
+view.setUint8(1, 0xFF)
+console.log(view.getInt16(0)) // -1
+```
+
+定型数组是另一种 ArrayBuffer 视图，和 DataView 不同的是，定型数组是锁定了某种类型的，且遵循系统原生的字节序。设计定型数组的目的就是提高与WebGL等原生库交换二进制数据的效率。除了使用构造函数之外，还可以使用 `<ElementType>.from()`和`<ElementType>.of()` 创建定型数组。
+
+```js
+const buf = new ArrayBuffer(12)
+// 定型数组构造函数参数可以是 ArrayBuffer, 一个表示 length 的数字或者其他定型数组
+const ints = new Int32Array(buf) // 一个 int32 占用 4 字节
+
+console.log(
+  ints.length, // 3
+  ints.buffer.byteLength, // 12
+)
+
+const int16s = new Int16Array(ints)
+console.log(
+  int16s.length, // 3
+  int16s.buffer.byteLength, // 6
+)
+
+// 定型数组的构造函数和实例都有一个BYTES_PER_ELEMENT属性，返回该类型数组中每个元素的大小：
+console.log(
+  Int32Array.BYTES_PER_ELEMENT, // 4
+  ints.BYTES_PER_ELEMENT,  // 4
+  Int16Array.BYTES_PER_ELEMENT,  // 2
+  int16s.BYTES_PER_ELEMENT,  // 2
+)
+```
