--- a/Frontend-learning/webpack/代码分离.md
+++ b/Frontend-learning/webpack/代码分离.md
@@ -52,14 +52,14 @@ const config = {
     common: ["lodash"], // 将 lodash 拆分成单独的入口进行打包，数组方式表示可以支持多个模块一起合并打包
   },
   // 如果我们需要在一个 html 中使用上面的多个 entry 则需要将 optimization.runtimeChunk 设置为 "single" 以确保模块不会重复加载。
-  // 什么是 runtime? runtime 就是 webpack 用于加载模块和缓存模块的一小段必要的代码，如果不设置以下选项为 "single" 将会在每个 entry 中存在一份 runtime 代码，导致多次加载和缓存相同的模块，导致一些隐含问题
+  // 什么是 runtime? runtime 就是 webpack 用于加载模块和缓存模块的一小段必要的代码，如果不设置以下选项为 "single" 将会在每个 entry 中存在一份 runtime 代码，可能导致多次加载和缓存相同的模块，导致一些隐含问题
   optimization: {
     runtimeChunk: "single",
   },
 };
 ```
 
-该配置会根据以上 3 个不同的 entry 打包出 3 个不同的 bundle。
+该配置会根据以上 3 个不同的 entry 打包出 3 个不同的 bundle，并且还会额外存在一份 runtime 的 bundle。
 
 其中，`import`、`dependOn` 也可以支持数组的方式传入多个模块。
 
@@ -76,6 +76,7 @@ const config = {
     another: "./src/another-module.js",
   },
   optimization: {
+    runtimeChunk: "single",
     splitChunks: {
       chunks: "all",
     },
@@ -92,6 +93,7 @@ const config = {
     another: "./src/another-module.js",
   },
   optimization: {
+    runtimeChunk: "single",
     splitChunks: {
       chunks: "all",
       cacheGroups: {
@@ -108,14 +110,14 @@ const config = {
 
 类似的还有分离 CSS 的插件：
 
-- [mini-css-extract-plugin](https://webpack.docschina.org/guides/code-splitting/plugins/mini-css-extract-plugin)
+- [mini-css-extract-plugin](https://webpack.js.org/plugins/mini-css-extract-plugin)
 
 ## 动态导入
 
 动态导入有两种方式：
 
 - 使用 ECMAScript 提案 的 [`import()`](https://webpack.docschina.org/api/module-methods/#import-1) 语法
-- 使用 webpack 遗留的 [require.ensure](https://webpack.docschina.org/api/module-methods/#requireensure)（不推荐）
+- 使用 webpack 遗留的 [require.ensure](https://webpack.docschina.org/api/module-methods/#requireensure)（不推荐，官方已经明确说明它被 `import()` 所取代）
 
 ### import() 语法
 
