--- a/Frontend-learning/webpack/其它优化.md
+++ b/Frontend-learning/webpack/其它优化.md
@@ -6,7 +6,7 @@ module.exports = {
   optimization: {
     concatenateModules: true, // 将多个代码模块打包到一个模块中，从而减小 bundle 的体积，默认情况下载 production 模式下会自动开启
 
-    innerGraph: false, // 是否对未使用的 export 成员进行进行内部资源图分析
+    innerGraph: false, // 是否对未使用的 export 成员进行进行内部资源图分析，它会分析模块内部的函数执行和调用关系，例如某个函数导入了其它模块的函数，但是该函数如果外部未使用，则该函数和它引入的其它模块的函数都将被标记为不导出，从而 Tree Shaking 更多代码
 
     mangleExports: "size", // 对 export 的成员名进行替换，"size" 通常只使用一个字符，对网络流量更好；"deterministic"（production 模式下默认值） 通常使用两个字符，设置为 true 等同于 "deterministic"；如果设置为 false 则保留原有的变量名，通常对阅读和调试代码更有用。
 
