--- a/Frontend-learning/工具/正则表达式/正则表达式.md
+++ b/Frontend-learning/工具/正则表达式/正则表达式.md
@@ -37,6 +37,10 @@
 - `^` 行开始，多行模式下，还匹配换行符后的位置（作为起点）
 - `$` 行结束，多行模式下，还匹配换行符后的位置（作为终点）
 
+## 取或操作
+
+- `|` 表示取或，如 `first|1st` 表示既可以匹配 `first` 也可以匹配 `1st`，而 `[]` 只能是匹配其中的单个字符
+
 ## 子表达式
 
 - `()` 可以表示其为子表达式
