--- a/Frontend-learning/工具/正则表达式/正则表达式.post.md
+++ b/Frontend-learning/工具/正则表达式/正则表达式.post.md
@@ -6,7 +6,7 @@
 
 考虑这样一些可有可无的场景：
 
-***
+---
 
 ## 纯文本匹配
 
@@ -15,7 +15,6 @@
 考虑下面这段文本：
 
             Hello, my name is Chosan.
-
 
 如果我们希望提取其中的 `my`，则正则表达式也为 `my`，如果我们希望提取其中的 `Chosan` 则正则表达式也为 `Chosan`。
 
@@ -28,6 +27,7 @@
 ### 连字符 `-`
 
 **集合的目的是给出一个能够匹配的范围**，如果我们需要表示所有的小写字母，使用 `[abcdefghijklmnopqrstuvwxyz]` 虽然也能达到目的，但是这样做未免过于繁琐，因此在集合中可以使用 `-` 来连接范围的开始和结束，举两个例子：
+
 - `[a-z]` 表示匹配所有的小写字母，即从 `a` 开始到 `z` 结束，
 - `[0-9A-Za-z]` 给出的集合包含 0 到 9 的数字、所有大写字母以及小写字母。
 
@@ -41,25 +41,27 @@
 
 ### 预定义字符
 
-我们经常会用到诸如  `[0-9a-zA-Z_]` 这类的集合，因此为了写起来简便，正则表达式中预定义了一些字符：
+我们经常会用到诸如 `[0-9a-zA-Z_]` 这类的集合，因此为了写起来简便，正则表达式中预定义了一些字符：
 
-| 元字符 |含义 |
-| --- | --- | 
-| `\d`| 表示 0 到 9 的数字，即等同于 `[0-9]` |  
-| `\D` | 对 `\d` 取反，表示匹配任何一个非数字，等同于 `[^0-9]`  |  
-| `\w` | 匹配一个字母、数字或者下划线，等同于 `[0-9A-Za-z_]`  |  
-| `\W` | 对 `\w` 取反，相当于 `[^0-9A-Za-z_]`  |  
-| `\s` | 匹配一个空白字符，相当于`[\f\n\r\t\v]`，不包含 `\b` |  
-| `\S`   | 对 `\s` 取反，即匹配一个非空白字符，相当于 `[^\f\n\r\t\v]`，包含 `\b`  |
+| 元字符 | 含义                                                                  |
+| ------ | --------------------------------------------------------------------- |
+| `\d`   | 表示 0 到 9 的数字，即等同于 `[0-9]`                                  |
+| `\D`   | 对 `\d` 取反，表示匹配任何一个非数字，等同于 `[^0-9]`                 |
+| `\w`   | 匹配一个字母、数字或者下划线，等同于 `[0-9A-Za-z_]`                   |
+| `\W`   | 对 `\w` 取反，相当于 `[^0-9A-Za-z_]`                                  |
+| `\s`   | 匹配一个空白字符，相当于`[\f\n\r\t\v ]`，不包含 `\b`                   |
+| `\S`   | 对 `\s` 取反，即匹配一个非空白字符，相当于 `[^\f\n\r\t\v]`，包含 `\b` |
 
 上面是一些常用的预定义字符，我们可以看到大写的元字符实际上就是对小写元字符的**取非**操作，实际上正则表达式中的元字符普遍也满足这个规律。
 
 有了上面那些预定义的集合类元字符可以大大的节省了我们写正则表达式的时间。其中 `\s` 中的每一个字符分别代表：
+
 - `\f`：换页符
 - `\n`：换行符
 - `\r`：回车符
 - `\t`：制表符（Tab 键）
 - `\v`：垂直制表符
+- ` `：空格
 
 ## 匹配任意字符
 
@@ -67,7 +69,7 @@
 
 显然，我们无法再使用像纯文本匹配那样的正则表达式，因为我们根本不清楚用户会输入什么内容！
 
-要解决这个问题，就需要使用到正则表达式中的元字符 `.` 了，它几乎可以**匹配任意字符**。如果用户输入的是 `Chosan`，则 `.` 匹配到的内容就是第一个字符 `C`，如果用户输入的是 `+-*/` 则 `.` 匹配的内容就是第一个字符  `+`。
+要解决这个问题，就需要使用到正则表达式中的元字符 `.` 了，它几乎可以**匹配任意字符**。如果用户输入的是 `Chosan`，则 `.` 匹配到的内容就是第一个字符 `C`，如果用户输入的是 `+-*/` 则 `.` 匹配的内容就是第一个字符 `+`。
 
 这里需要注意的是，`.` 并不是只能匹配第一个字符，而是因为一个 `.` 只能代表一个字符，因此它优先匹配到了文本中第一个字符而已。同理，如果我们希望获取前两个字符，使用正则表达式 `..` 即可。
 
@@ -75,33 +77,34 @@
 
 ### 转义
 
-元字符 `.` 匹配任意字符，要是我们就希望匹配文本中的 `.` 怎么办呢？在正则表达式中，如果要匹配元字符，则需要使用 `\` 对元字符进行转义，举个例子，如果我们希望匹配域名 `tcn.cn` 中的 `.cn` 部分，就需要使用正则表达式  `\.cn` 了，否则如果使用 `.cn` 则首先会匹配到 `tcn` 而非我们想要的 `.cn`。
+元字符 `.` 匹配任意字符，要是我们就希望匹配文本中的 `.` 怎么办呢？在正则表达式中，如果要匹配元字符，则需要使用 `\` 对元字符进行转义，举个例子，如果我们希望匹配域名 `tcn.cn` 中的 `.cn` 部分，就需要使用正则表达式 `\.cn` 了，否则如果使用 `.cn` 则首先会匹配到 `tcn` 而非我们想要的 `.cn`。
 
 ## 重复匹配
 
-前面我们使用了 `..` 来匹配一段文本的前两个字符，如果我们要匹配前  100 个字符怎么办呢？显然连续写 100 个 `.` 这种做法是不合常理的，即便你认为它勉强符合常理，1000 个、10000 个总不符合常理了吧。
+前面我们使用了 `..` 来匹配一段文本的前两个字符，如果我们要匹配前 100 个字符怎么办呢？显然连续写 100 个 `.` 这种做法是不合常理的，即便你认为它勉强符合常理，1000 个、10000 个总不符合常理了吧。
 
 因此，重复匹配就诞生了。正则表达式给我们提供了以下几种重复匹配的元字符：
 
 - `?`：匹配 0 个或一个字符，
-   - 举例： `os?` 可以匹配 `boss` 中的 `os`，`coat` 中的 `o`，因为 `s` 可以出现 0 次或 1 次
+  - 举例： `os?` 可以匹配 `boss` 中的 `os`，`coat` 中的 `o`，因为 `s` 可以出现 0 次或 1 次
 - `+`：匹配 1 次以上
-   - 举例： `os+` 可以匹配 `boss` 中的 `oss`，`ios` 中的 `os`，但不能匹配 `bob` 中的 `o`，因为 `s` 至少要出现 1 次以上
+  - 举例： `os+` 可以匹配 `boss` 中的 `oss`，`ios` 中的 `os`，但不能匹配 `bob` 中的 `o`，因为 `s` 至少要出现 1 次以上
 - `*`：匹配任意次，即 0 到无限次
-   - 举例： `os*` 可以匹配 `boss` 中的 `oss`，`ios` 中的 `os` 以及 `bob` 中的 `o`，因为 `s` 可以出现任意次数
+  - 举例： `os*` 可以匹配 `boss` 中的 `oss`，`ios` 中的 `os` 以及 `bob` 中的 `o`，因为 `s` 可以出现任意次数
 - `{m,n}`： 匹配 m 到 n 次
-   - 举例： `os{2,4}` 可以匹配字符串 `boss` 中的 `ss`，`bosss` 中的 `sss` 以及 `bossss` 中的 `ssss`，如果出现更多（大于4个）连续 `s` 也最多匹配前 4 个连续 `s`，但是无法匹配 `bos` 中的 `s`
+  - 举例： `os{2,4}` 可以匹配字符串 `boss` 中的 `ss`，`bosss` 中的 `sss` 以及 `bossss` 中的 `ssss`，如果出现更多（大于 4 个）连续 `s` 也最多匹配前 4 个连续 `s`，但是无法匹配 `bos` 中的 `s`
 
 上面的集中模式看似已经很圆满了，但是还有一些场景无法覆盖，比如：
+
 - 仅匹配 `m 次`
 - 匹配 `m 次以上`
 
-由于  `?` 要么匹配 0 次要么匹配 1次，`+` 表示至少 1 次， `*` 表示任意次数。都无法指定到特定的某个次数上，因此 `{m,n}` 这种写法还有另外两个衍生模式：
+由于 `?` 要么匹配 0 次要么匹配 1 次，`+` 表示至少 1 次， `*` 表示任意次数。都无法指定到特定的某个次数上，因此 `{m,n}` 这种写法还有另外两个衍生模式：
 
 - `{m}`：匹配 m 次
-    - 举例：`os{1}` 能够匹配 `boss` 中的 `os`，`os{2}` 能匹配 `boss` 和 `bosss` 中的 `oss`，但无法匹配 `bos`，因为 `s` 需要连续出现两次
+  - 举例：`os{1}` 能够匹配 `boss` 中的 `os`，`os{2}` 能匹配 `boss` 和 `bosss` 中的 `oss`，但无法匹配 `bos`，因为 `s` 需要连续出现两次
 - `{m,}`：匹配 m 次以上
-    - 举例：`os{2,}` 能够匹配`boss` 中的 `oss` 以及 `bosss` 中的 `osss`，但无法匹配 `bos`
+  - 举例：`os{2,}` 能够匹配`boss` 中的 `oss` 以及 `bosss` 中的 `osss`，但无法匹配 `bos`
 
 ### 懒惰（非贪婪）
 
@@ -111,14 +114,13 @@
 
 你可能觉得这很正常，毕竟我们说了 `*` 表示匹配任意次，即 0 到 无穷次，所以上面的匹配完全没问题呀！
 
-是的，它的确没有问题，但既然 `*` 表示 0 到 无穷次，那为什么不是匹配到 0 次就停止，或者为什么不是只匹配 1 次就停止呢，0 和 1 也在 * 表示的范围中呀！
+是的，它的确没有问题，但既然 `*` 表示 0 到 无穷次，那为什么不是匹配到 0 次就停止，或者为什么不是只匹配 1 次就停止呢，0 和 1 也在 \* 表示的范围中呀！
 
 这是因为默认情况下，重复匹配都是**尽可能多**的匹配，能匹配 10 个就绝不只匹配 9 个，有 100 个就绝对不只匹配 99 个！由于这种模式很贪婪，因此在正则表达式中也被称作**贪婪模式**！
 
 贪婪模式有贪婪模式的好处，但并不是所有情况我们都希望它那么贪婪。考虑如下文本：
 
             <p>我很<em>贪婪</em>，你来<em>打我</em>呀!</p>
-            
 
 如果此时我们希望获得第一个 `<em>` 的完整内容，我们可能会这么写正则表达式 `<em>.*<\/em>`。我们期望它能够帮我们匹配出字符串 `<em>贪婪</em>`。但实际并非如此，由于 `.` 可以匹配任意字符，`*` 默认情况下又是贪婪模式，因此 `<em>.*<\/em>` 实际上匹配到了 `<em>贪婪</em>，你来<em>打我</em>`，即第一个 `<em>` 开始到第二个 `</em>` 结束。这是你想要的吗？
 
@@ -127,6 +129,7 @@
 正则表达式也为我们考虑到了这种情况，能尽可能少的匹配这种模式叫**懒惰模式**，也叫**非贪婪模式**。
 
 懒惰模式的方法是在重复匹配的元字符后面加一个 `?`，举个例子：
+
 - `*` 是贪婪模式，`*?` 就是非贪婪模式
 - `+` 是贪婪模式，`+?` 就是非贪婪模式
 - `{m,}` 是贪婪模式，`{m,}?` 就是非贪婪模式
@@ -142,17 +145,17 @@
 ## 边界匹配
 
 ### 单词边界 `\b`
-            
+
 考虑这样一种情况，假设我们希望提取出一段文本中的单词 `you`，因此我们写了一个正则表达式 `you` 希望它能够帮我们达到目的，但事实真的如此吗？
 
 举个例子：
-            
+
             you are so young!
-            
+
 上面这段文本使用正则表达式 `you` 确实能帮你匹配到单词 `you`，但是如果是下面这段文本呢？
 
             your coat is nice! —— thank you!
-            
+
 如果再使用正则表达式 `you` 来匹配那就不行了，因为它首先会匹配到单词 `your` 的前三个字母 `you`，很明显这不是我们想要的，我们想要的是匹配文本中的单词 `you` 而不是一个含有 `you` 的单词片段。
 
 要解决这个问题，就需要用到正则表达式中的边界匹配了。
@@ -162,7 +165,6 @@
 继续以上面的例子为例，我们需要匹配出文本中的单词 `you`，现在可以用正则表达式 `you\b` 来指明单词的边界，针对上面两段文本，它都能正确的匹配出单词 `you` 来，但它不够严谨，因为这种只顾屁股不顾头的做法遇到 `tayou` 之类的单词就 GG 了，因此更加严谨的写法是前后都加上单词边界 `\byou\b`。
 
 `\B` 与 `\b` 正好相反，它匹配一个非单词边界，如 `hard - working` 使用正则表达式 `\B-\B` 就能找到其中的 `-`，但如果连起来写 `hard-working` 就无法匹配了。
-
 
 ### 字符串边界 `^` 与 `$`
 
@@ -191,11 +193,15 @@
 
 回到本节最开始的那个问题上，我们要校验文本是否是以 `Hi,` 打头，以 `Bye!` 结尾，我们可以这么来写正则表达式：`^Hi,.*Bye!$`
 
+## 取或操作
+
+- `|` 表示取或，如 `first|1st` 表示既可以匹配 `first` 也可以匹配 `1st`，而 `[]` 只能是匹配其中的单个字符
+
 ## 分组（子表达式）
 
 考虑这样一种情况：我们希望匹配表达式中的连续 10 个 Hi，这段文本内容如下：
 
-            Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi 
+            Hi Hi Hi Hi Hi Hi Hi Hi Hi Hi
 
 用我们前面讲到的内容，能完成吗？
 
@@ -218,7 +224,7 @@
 
 ### 捕获与非捕获
 
-*** 
+---
 
 #### 捕获组
 
@@ -227,10 +233,10 @@
 举个例子，在正则表达式 `(\d+)\.(.+)` 中，`(\d+)` 是第一个分组，`(.+)` 是第二个分组，它们会被正则表达式引擎记录下来，以便后续通过 `$n` 的方式来访问第 `n` 个捕获组。以 JavaScript 代码为例：
 
 ```js
-var str = '99. Hi, this is Charpter 99'
-str.match(/(\d+)\.(.+)/)
-RegExp.$1  // "99"
-RegExp.$2  // " Hi, this is Charpter 99"
+var str = "99. Hi, this is Charpter 99";
+str.match(/(\d+)\.(.+)/);
+RegExp.$1; // "99"
+RegExp.$2; // " Hi, this is Charpter 99"
 ```
 
 #### 非捕获组
@@ -240,13 +246,13 @@ RegExp.$2  // " Hi, this is Charpter 99"
 非捕获告诉正则引擎这个分组不用捕获，也就是只匹配不记录。非捕获的形式为 `(?:)`，其中以 `(?:` 开始一个非捕获组，以 `)` 结束分组，中间是分组内容。它与捕获分组的区别就在于分组前面加了 `?:` 而已。我们试试非捕获分组：
 
 ```js
-var str = '99. Hi, this is Charpter 99'
-str.match(/(?:\d+)\.(.+)/)
-RegExp.$1  // " Hi, this is Charpter 99"
-RegExp.$2  // ""
+var str = "99. Hi, this is Charpter 99";
+str.match(/(?:\d+)\.(.+)/);
+RegExp.$1; // " Hi, this is Charpter 99"
+RegExp.$2; // ""
 ```
 
-由于我们指定了第一个分组为非捕获组，因此正则引擎就只让该分组参与匹配，但不记录该分组结果。第二个分组不是非捕获组，因此它是第一个被记录的分组，通过 `$1` 来获取其匹配内容，而此时 `$2` 没有对应的引用分组，所有没有内容。
+由于我们指定了第一个分组为非捕获组，因此正则引擎就只让该分组参与匹配，但不记录该分组结果。第二个分组不是非捕获组，因此它是第一个被记录的分组，通过 `$1` 来获取其匹配内容，而此时 `$2` 没有对应的引用分组，所以没有内容。
 
 #### 替换文本
 
@@ -255,14 +261,14 @@ RegExp.$2  // ""
 比如说有如下文本：
 
             Hello, Lucy, I'm Chosan.
-            
+
 此时我们需要将 Lucy 和 Chosan 兑换位置，也就是相互替换。我们需要怎么做呢？
 
 刚刚我们已经知道捕获会被正则表达式引擎记录，然后通过 `$n` 的方式引用第 `n` 个捕获组，因此我们可以将 `Lucy` 和 `Chosan` 分别捕获起来，正则表达式为 `(Lucy)(.*)(Chosan)`，以 JavaScript 代码举例：
 
 ```js
-var str = "Hello, Lucy, I'm Chosan."
-str.replace(/(Lucy)(.*)(Chosan)/, '$3$2$1')  // "Hello, Chosan, I'm Lucy."
+var str = "Hello, Lucy, I'm Chosan.";
+str.replace(/(Lucy)(.*)(Chosan)/, "$3$2$1"); // "Hello, Chosan, I'm Lucy."
 ```
 
 其中，`replace` 方法第二个参数中的 `$n` 就是对其第一个参数指定的正则表达式中捕获组的引用。
@@ -274,7 +280,7 @@ str.replace(/(Lucy)(.*)(Chosan)/, '$3$2$1')  // "Hello, Chosan, I'm Lucy."
 举个例子，有如下文本：
 
             看看<em>回溯</em>怎么用
-            
+
 如果我们需要匹配 `<em>` 到 `</em>` 的这一段内容，我们需要怎么做？
 
 针对上面这段文本，`<em>.*?<\/em>` 是可以的。但是我们发现 `em` 实际上是重复劳动力，你可能觉得这并无大碍，但在实际场景中，很有可能我们要匹配的并非一个特定的 `em` 标签，而是一个未知标签，因此我们可能定义了这样一个通用的正则表达式来匹配标签名：`[A-Za-z][\w]*\s*`，然后使用这个通用正则表达式来做上面的匹配工作：`<[A-Za-z][\w]*\s*>.*?<\/[A-Za-z][\w]*\s>`，同一个表达式在前后都用到了，并且同时还存在好几个问题：
@@ -298,11 +304,11 @@ str.replace(/(Lucy)(.*)(Chosan)/, '$3$2$1')  // "Hello, Chosan, I'm Lucy."
 好了，此时的正则表达式 `<([A-Za-z][\w]*\s*)>.*?<\/\1>` 就能够满足我们的需要了，即开标签中匹配什么内容，闭标签中就匹配同样的内容，如：
 
             看看<em>回溯</em>怎么用
-            
+
 能够匹配成功，而：
 
             看看<em>回溯</p>怎么用
-            
+
 就不能匹配成功。
 
 而且此时还不用重复写过多的表达式。
@@ -315,16 +321,16 @@ str.replace(/(Lucy)(.*)(Chosan)/, '$3$2$1')  // "Hello, Chosan, I'm Lucy."
 
 分组命名的格式为 `(?<groupName>)`，其中分组以 `(?<groupName>` 开始，以 `)` 结尾，中间就是分组的正则表达式内容，举个例子：
 
-正则表达式 `(?<tagName>[A-Za-z][\w]*\s*)`  就表示我们定义了一个分组，其名称为 `tagName`，其内容为 `[A-Za-z][\w]*\s*`。
+正则表达式 `(?<tagName>[A-Za-z][\w]*\s*)` 就表示我们定义了一个分组，其名称为 `tagName`，其内容为 `[A-Za-z][\w]*\s*`。
 
 定义好了分组名称之后，我们就可以在后面直接通过`\k<名称>` 的方式来引用具名分组，因此之前回溯部分的示例 `<([A-Za-z][\w]*\s*)>.*?<\/\1>` 可以通过命名分组定义为： `<(?<tagName>[A-Za-z][\w]*\s*)>.*?<\/\k<tagName>>`。现在一眼就能定位到 `tagName` 分组定义在什么位置，在有较多分组或者表达式可能经常需要改变分组位置的时候，给分组命名是很有帮助的。
 
-## 前后查找（零宽断言）
+## 前后查找（正反查找 或 零宽断言）
 
 考虑这样一种情况
 
             <h2>look ahead</h2>
-            
+
 我们希望提取出 `<h2>` 和 `</h2>` 之间的内容，但并不希望 `<h2>` 和 `</h2>` 也包含在结果中。怎么做呢？
 
 除了借助特定的编程语言，在正则表达式中，我们可以使用**前后查找**！
@@ -337,10 +343,10 @@ str.replace(/(Lucy)(.*)(Chosan)/, '$3$2$1')  // "Hello, Chosan, I'm Lucy."
 
 向前查找就是给定一个位置，查找在其前面的内容并返回结果。但这个位置的内容并不希望返回，它只做匹配用，换句话说，它只是个 “工具人”！
 
-向前查找使用 `(?=)`，其中以 `(?=` 开始，以 `)` 结束，中间就是我们用来 “站” 的位置，我们来看个例子吧！
+向前查找使用 `(?=)`，其中以 `(?=` 开始，以 `)` 结束，中间就是我们用来 “站” 的位置，如 `x(?=y)` 表示的就是如果 `x` 后面是 `y` 就表示 x 匹配成功，我们来看个例子吧！
 
             <h2>look ahead</h2>
-            
+
 现在，我们站在 `</h2>` 的位置向前查找，我们写出正则表达式 `.*(?=<\/h2>)`，它匹配出在 `</h2>` 前面的内容并返回，即 `<2>look ahead`，返回结果中并不包含 `</h2>` 本身。
 
 这就是我们所谓的站在 `</h2>` 的位置向前看！
@@ -349,12 +355,12 @@ str.replace(/(Lucy)(.*)(Chosan)/, '$3$2$1')  // "Hello, Chosan, I'm Lucy."
 
 向后查找就是给定一个位置向后看，所见即所得。
 
-向后查找使用 `(?<=)` 的格式，以 `(?<=` 开始，以 `)` 结束，中间就是我们 “站” 的位置。
+向后查找使用 `(?<=)` 的格式，以 `(?<=` 开始，以 `)` 结束，中间就是我们 “站” 的位置，如 `(?<=y)x` 表示如果 `x` 前面是 `y` 表示 `x` 被匹配成功。
 
 还是向前查找中的例子为例：
 
             <h2>look ahead</h2>
-            
+
 我们要获取 `<h2>` 后面的内容，咋做呢？
 
 参照向后查找的格式，我们写出正则表达式 `(?<=<h2>).*`，它返回的匹配结果为 `look ahead</h2>`。
@@ -369,20 +375,18 @@ str.replace(/(Lucy)(.*)(Chosan)/, '$3$2$1')  // "Hello, Chosan, I'm Lucy."
 
 刚学完前后查找，很快就能用上了。
 
-`<h2>` 和 `</h2>` 之间的内容实际上就是站在 `<h2>` 向后看和站在 `</h2>` 向前看的内容交集，我们以此目标来写出这样一个正则表达式：`(?<=<h2>).*(?=<\/h2>)`，它返回的结果就是 `look ahead`，即刚好是 `<h2>` 和 `</h2>` 之间的内容。
+`<h2>` 和 `</h2>` 之间的内容实际上就是站在 `<h2>` 向后看和站在 `</h2>` 向前看的内容交集，我们以此目标来写出这样一个正则表达式：`(?<=<h2>).*(?=<\/h2>)`，它返回的结果就是 `look ahead`，即刚好是 `<h2>` 和 `</h2>` 之间的内容，我们还可以搭配上前面的回溯，给标签个命名 `/(?<=<(?<tag>h2)>).*(?=<\/\k<tag>>)/`。
 
 ### 取非
 
-前面我们说的前后查找的方式被称为 “正向前后查找”，其包含“正向前查找” 和 “正向后查找”。
+前面我们说的前后查找的方式被称为 “正反查找”，其包含“正向查找” 和 “反向查找”。
 
-其实前后查找还包含 “负向前后查找”，这种模式相当于是对正向前后查找的取非操作，不太常用。它的写法就是把 “正向前后查找” 中的 `=` 替换为 `!`：
+其实正反查找还可以`取非`操作，它的写法就是把 “正向前后查找” 中的 `=` 替换为 `!`，原来是前后如果是对应的元素则匹配成功，`取非`之后表示前后不是对应的元素才匹配成功：
 
-- 正向前查找 `(?=)`
-- 负向前查找 `(?!)`
-- 正向后查找 `(?<=)`
-- 负向后查找 `(?<!)`
-
-
+- 正向查找 `(?=)`：如 `x(?=y)` 表示如果 x 后面跟着 y 就匹配成功
+- 正向否定查找 `(?!)`：`(?=)` 的否定形式，如 `x(?!y)` 表示如果 x 后面不是 y 则匹配成功
+- 反向查找 `(?<=)`：如 `(?<=y)x` 表示如果 x 前面是 y 则匹配成功
+- 反向否定查找 `(?<!)`：`(?<=)` 的否定形式，如 `(?<!y)x` 表示如果 x 前面不是 y 则匹配成功
 
 ## 修饰符
 
@@ -400,12 +404,12 @@ str.replace(/(Lucy)(.*)(Chosan)/, '$3$2$1')  // "Hello, Chosan, I'm Lucy."
 修饰符 `i` 是 `ignore` 的意思，它的作用表示匹配时忽略大小写。举个例子：
 
 一般情况下，正则表达式是大小写严格的，意味着 `my` 只能匹配字符串 `my`，不能匹配 `My`、`MY` 以及 `mY`。但经常我们并不关心大小写，因此可以使用 `i` 修饰符。
- 
+
 ### `g`
 
 修饰符 `g` 是 `global` 的意思，它表示搜索全局文本。举个例子：
 
-默认情况下，正则表达式匹配到第一项就退出。但是一段文本中可能包含许多可以匹配的项，比如 
+默认情况下，正则表达式匹配到第一项就退出。但是一段文本中可能包含许多可以匹配的项，比如
 
             today, it's raining
 
@@ -417,11 +421,10 @@ str.replace(/(Lucy)(.*)(Chosan)/, '$3$2$1')  // "Hello, Chosan, I'm Lucy."
 
 默认情况下，`^` 只能匹配文本的开头，`$` 只能匹配文本的结尾。如果文本有多行的情况下也是如此。但有时候我们希望 `^` 表示每一行的开头，`$` 表示每一行的结尾，举个例子：
 
-                        
                Yesterday is Monday
                 Today is Tuesday
                 Tomorrow is Wednesday
-          
+
 这是一个多行文本，我们希望匹配以 `T` 打头并且以 `day` 结尾的行，需要怎么做呢？
 
 `^T.*(day)$` 并不能达到我们的目的，因为：
@@ -439,9 +442,10 @@ str.replace(/(Lucy)(.*)(Chosan)/, '$3$2$1')  // "Hello, Chosan, I'm Lucy."
 ```js
 var str = `Yesterday is Monday
 Today is Tuesday
-Tomorrow is Wednesday`
-str.match(/^T.*(day)$/m)
+Tomorrow is Wednesday`;
+str.match(/^T.*(day)$/m);
 ```
+
 得到匹配结果：`"Today is Tuesday"`，如果我们要匹配所有以 `T` 开头并且以 `day` 结尾的行，可以加上前面提到的 `g` 修饰符表明我们要全局搜索。
 
 ### `s`
