--- a/Frontend-learning/React/学习资料.md
+++ b/Frontend-learning/React/学习资料.md
@@ -3,3 +3,34 @@
 - [build your own react](https://pomb.us/build-your-own-react/)
 - [React 技术揭秘](https://react.iamkasong.com/)
 - [React 核心原理浅析](https://juejin.cn/post/6987197729046790175)：该文中推荐了 [build your own react](https://pomb.us/build-your-own-react/) 和 [React 技术揭秘](https://react.iamkasong.com/)
+
+### build your own react
+
+分为以下几个阶段：
+
+- The `createElement` Function
+- The `render` Function
+- Concurrent Mode
+- Fibers
+- Render and Commit Phases
+- Reconciliation
+- Function Components
+- Hooks
+
+由于一次性添加到 DOM 中可能导致卡顿，给用户不流畅的感觉，因此使用 `requestIdleCallback`（后面 react 采用 `requestAnimationFrame` 来模拟 `requestIdleCallback`，在 [scheduler](https://github.com/facebook/react/tree/master/packages/scheduler) 包中） 将任务分片。通过回调函数中的参数中的方法 `timeRemaining()` 来获取该帧的剩余时间，当剩余时间小于 1 时将控制权还给浏览器，否则执行 DOM 更新。
+
+但是由于任务可能中断（即控制权交还给浏览器），因此我们需要定义一个函数`performUnitOfWork`，每次仅更新一个元素，它返回下一次更新的任务。
+
+在 React 中引入 fiber 概念，fiber 代表了每个 React 元素的信息已经作为每次更新的参数传递给 `performUnitOfWork`
+
+每个 fiber 需要完成以下几项任务：
+
+- 将元素转换成 DOM 并添加到 DOM
+- 为 children 创建 fiber
+- 选择下一个 fiber
+
+所有的 fiber 通过链表形式串连起来，从根 fiber 开始对整个 vdom 进行深度遍历。当最后回到 根 fiber 则说明遍历完成。
+
+![图片](https://pomb.us/static/19c304dcb3824b14722691ded539ecdb/ac667/fiber4.png)
+
+但是正是由于现在将 DOM 更新拆分成了多个任务，因此当更新到一半，控制权交回了浏览器，用户可能看到的就是半新半旧的页面，这肯定不行。
