--- a/Frontend-learning/复习/零散的小知识点.md
+++ b/Frontend-learning/复习/零散的小知识点.md
@@ -63,3 +63,199 @@
       - 默认情况下，`.` 不会匹配换行符 `\n`，加上 `s` 修饰符之后 `.` 才是真正的匹配任意字符，包括 `\n`
 
 ---
+
+- `for in` 和 `for of` 区别：
+
+  - `for in` 用于可枚举对象，如对象、数组、字符串等，其 `key` 的 `enumerable` 为 `true` 的字段
+  - `for of` 用于可迭代数据，如数组、字符串、Map、Set 等，其需要实现一个 `Symbol.iterator` 接口
+
+---
+
+- `offset{Height,Width}`、`client{Height,Width}`、`scroll{Height,Width}`、`scroll{Top,Left}`区别
+  - `offset`开头： border + padding + content
+  - `client`开头：padding + content（不算 border）
+  - `scroll`开头：
+    - `scroll{Height,Width}`：padding + 实际内容宽高（如子元素宽高超过父元素出现滚动条，则实际内容是子元素的宽高）
+    - `scroll{Top,Left}`：当前元素滚动造成的超出上边和左边的像素值，未滚动则为 0，对应方向滚动多少像素就是多少像素
+
+---
+
+### `NodeList` 和 `HTMLCollection` 的区别
+
+Node 是所有节点的基类。节点都是单个对象，因此有时候需要容纳多个节点的数据结构，就出现了 `NodeList` 和 `HTMLCollection`，很多 DOM 属性和方法都返回这两个之一，主要区别在于：
+
+- `NodeList` 可以包含各种类型的节点，可以通过 `Node.childNodes` 或 `document.querySelectroAll()` 等节点搜索方法获取，类数组对象，可以使用 `forEach` 遍历
+  - `Node.childNodes` 是动态集合，即 DOM 新增或删除节点都会立即实时反应在 NodeList 实例上
+  - `document.querySelectroAll()` 等节点搜索方法返回的是静态集合，即改变不会反应到 `NodeList` 实例
+- `HTMLCollection` 中仅包含 HTML 元素节点，类数组对象，但并不能使用 `forEach`，只能使用 `for` 循环遍历。它的实例主要是一些 Document 对象的集合属性，如 `document.{links,forms,images}` 以及 `el.children`，且都是动态集合。
+
+根据元素的继承关系，`Text` 和 `Comment` 继承自 `CharacterData` 继承自 `Node`，而 HTML 各种元素节点都继承自 `HTMLElement` 继承自 `Element` 继承自 `Node`，因此，我们还可以知道：
+
+- `el.childNodes` 和 `el.children`
+  - `childNodes`：属于 `NodeList` 类型，包含 `Text` 和 `Comment` 节点
+  - `children`：属于 `HTMLCollection` 类型，仅包含 `Element` 元素
+
+---
+
+### Vue 组件通讯方式
+
+- `props` & `$emit`
+- `EventBus`，在 vue2 中可以使用 `new Vue`，在 vue3 中无法直接 `new Vue`，可引入 `event-emitter`
+- `$attrs`
+- `$parent`：引用父组件
+- `$resf`：引用子组件
+- `provide` 和 `inject`，其中 `provide` 可以是对象也可以是函数，如果需要传入响应式数据，需要使用函数然后返回 `{ field: computed(() => this.xxx) }`
+- `vuex`
+
+---
+
+### JS 严格模式的特点
+
+- 全局变量必须先声明
+- 禁止使用 `with`
+- 创建 `eval` 作用域，即 `eval` 内部的代码有单独的作用域，不影响外部
+- 禁止 `this` 指向 `window`
+- 函数参数不能重名（非严格模式可以重名）
+
+此外还有很多，需要查询具体文档
+
+---
+
+### for 和 forEach 那个更快
+
+`for` 更快，因为 `for` 的代码在同一个作用域内，而 `forEach` 有回调函数，每次执行回调函数会创建额外的上下文调用栈，这部分有额外开销。
+
+### JS-Bridge
+
+一般 JS-Bridge 有两种实现方式：
+
+- 注入全局 API：适用于比较简单的情况，但不太适用于异步请求的情况
+- URL Scheme：相当于自定义的协议，如 `weixin://ld/scan` 就是打开扫一扫，其原理是一般 webview 发送请求会走 App 去发送，但是 App 可以拦截并根据协议判断是否是自己定义的协议，如果是就走自己的逻辑，如何是 HTTP 就发送 HTTP 请求
+
+### 移动端 300 毫秒延迟
+
+最初是 iphone 为了支持移动端页面双击放大（double tap to zoom）而设计。但在本身就是移动端网页的页面上每次点击都需要先等 300 ms 就不太合适。
+
+早期有个库叫 `fastClick`，其解决方案是：
+
+- 监听 `touchend` 事件中（触发顺序是 `touchstart` -> `touchend` -> `click`）
+- 自定义一个 DOM 事件模拟 `click` 事件，并派发给对应的元素（在 `touchstart` 中记录了目标元素，如果是文本节点就取它的父节点）
+- 把默认的 `click` 事件（300 ms 之后触发）禁止掉
+
+但现在一般用不上了，因为如果 `meta` 中存在 `width=device-width` 就不会有 300 ms 延迟：
+
+```html
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+```
+
+### defer 和 async
+
+都是用于加载 script 标签的内容。
+
+- `defer`：不影响 DOM 解析（加载资源和 DOM 解析并行），解析完成后按加载顺序执行，在 DOMContentLoaded 之前
+- `async`：不影响 DOM 解析，但下载完成后立即执行，如果 DOM 还在解析，执行过程会中断 DOM 解析
+
+### preload、prefech、dns-prefetch、preconnect
+
+`prefech` 和 `preload` 对标，`dns-prefech` 和 `preconnect` 对标。
+
+- `preload`：资源预加载，表示资源在当前页面使用，优先级高
+- `prefech`：资源预取，表示资源在未来页面使用，网络空闲时加载
+  如：
+
+```html
+<link rel="preload" href="style.css" as="style" />
+<link rel="preload" href="main.js" as="script" />
+<link rel="prefech" href="next-component.js" as="script" />
+```
+
+- `dns-preftch`：(DNS 预获取) 是尝试在请求资源之前解析域名。这可能是后面要加载的文件，也可能是用户尝试打开的链接目标。节省 DNS 查找带来的延迟。
+- `preconnect`：DNS 预连接，提前建立 TCP 连接，如果是 HTTPS 还会提前执行 TLS 握手，但是不宜同时与太多第三方建立连接，建议只对关键的域名进行连接，其它域名仅用 `dns-prefetch` 即可
+
+```html
+<!-- href 就是希望提前连接的域名 -->
+<link rel="dns-prefetch" href="https://fonts.gstatic.com/" />
+<!-- 同样可以通过 HTTP 头的 Link 字段来实现，如 -->
+<!-- Link: <https://fonts.gstatic.com/>; rel=dns-prefetch -->
+
+<!-- 一些资源（如字体）以匿名模式加载。在这种情况下，应使用预连接提示设置 crossorigin 属性。如果您省略它，则浏览器将仅执行 DNS 查找。 -->
+<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+```
+
+`dns-preftch` 和 `preconnect` 二者可配合使用。
+
+参考资料：
+
+- [Using dns-prefetch - MDN](https://developer.mozilla.org/en-US/docs/Web/Performance/dns-prefetch)
+
+---
+
+### 首屏优化
+
+- 路由懒加载（SPA）
+- 服务端渲染（SSR）
+- App 预取：如果 H5 在 App WebView 中，可使用 App 预取，进入 H5 时直接从 App 中获取内容（如通过 jsBridge）
+- Hybrid：提前将 HTML、JS、CSS 等下载到 App 内部，在 App WebView 中使用 `file://` 协议加载页面
+- PWA 技术
+
+---
+
+### 设计模式
+
+- `工厂模式`：用一个工厂函数创建实例，隐藏 new，例如对象上有一个静态方法 `create`，它专门用来创建对象并包含一些创建逻辑。又比如 JQuery 的 $ 函数，实际上也是根据传入的选择器创建了一个 JQuery 实例
+- `单例模式`：全局仅能创建一个实例，多次创建返回相同实例。如 `Vuex`
+- `代理模式`：给对象添加一层代理，可以在代理中拦截并校验用户操作，用户只能通过代理访问对象，无法直接访问对象。如 ES6 的 Proxy
+- `观察者模式`：观察者（Observer）直接和观察对象（Subject）进行绑定，当对象发生改变会触发观察者执行，如 `btn.addEventListener('click',() => { ... })`
+- `发布订阅模式`：分 Publisher 和 Observer，它们互不认识，需要中间媒介。例如 `EventEmitter`，任何地方都可以通过 `on` 添加事件进行观察，而且任何地方都可以通过 `emit` 触发 Observer 执行，但是双方都并不知道对方是谁。
+- `装饰器模式`：原功能不变，增加一些新功能（AOP 面向切面编程），如 Decorator 语法
+
+`观察者模式`和`发布订阅模式`的区别就是：观察者模式是观察者直接和观察对象进行关联（如 `addEventListener`），而发布订阅模式是通过中间的 `Event Channel` 进行关联（如 `EventBus`）。
+
+---
+
+### instanceof 原理
+
+如 `f instanceof Foo`，其流程是顺着 `f.__proto__` 向上查找原型链，如果找到 `Foo.prototype` 则返回 `true`，否则返回 `false`
+
+```js
+function instanceOf(instance, type) {
+  if (!instance || (typeof type !== "object" && typeof type !== "function")) {
+    return false;
+  }
+  while (instance) {
+    if (instance.__proto__ === type.prototype) {
+      return true;
+    }
+    instance = instance.__proto__;
+  }
+  return false;
+}
+```
+
+---
+
+### 实现深拷贝，考虑循环引用、Map、Set
+
+思路：
+
+- 循环引用：使用 WeakMap 记录已经出现过的对象，如果某个对象存在于 WeakMap 中，则直接使用，不再拷贝它的属性值
+- Map、Set：使用 `obj instanceof Map` 来判断，`Set` 同理
+
+### 属性赋值操作优先级大于变量赋值
+
+属性赋值操作优先级大于变量赋值，即 `a.x = a = 1` 中 `a.x` 会被先确定其引用的位置，如果 `a` 在连续赋值过程中发生变化，`x` 的指向也不会随着改变。
+
+```js
+let a = { n: 1 };
+let b = a;
+
+// 先初始化 a.x = undefined，此时 a.x 指向 { n: 1, x: undefined }
+// 赋值操作从右往左执行，但 a.x 的引用还是指向原来的 a 中的 x
+a.x = a = { n: 2 };
+
+// 结果是
+// a: { n: 2 }
+// b: { n: 1, x: { n: 2 }}
+```
+
+---
