--- a/Javascript-learning/JavaScript高级程序设计/6.面向对象的程序设计.md
+++ b/Javascript-learning/JavaScript高级程序设计/6.面向对象的程序设计.md
@@ -104,8 +104,8 @@ function Person(name, age, job) {
     alert(this.name);
   }
 }
-var person1 = Person('Nicholas', 29, 'Software Engineer');
-var person2 = Person('Greg', 27, 'Doctor');
+var person1 = new Person('Nicholas', 29, 'Software Engineer');
+var person2 = new Person('Greg', 27, 'Doctor');
 ```
 
 与工厂模式区别在于：
