--- a/算法/经验.md
+++ b/算法/经验.md
@@ -1,5 +1,13 @@
 # 算法经验
 
+复杂度：复杂度是一个数量级的测量标准
+
+- `O(1)`：常量级，可定数量
+- `O(logn)`：二分思想
+- `O(n)`：for 循环
+- `O(n*logn)`：for 循环 + 二分
+- `O(n^2)`：双重循环
+
 - 合并两个数组（包括字符串）时，如果从前往后复制每个数字（或字符）需要重复移动数字（或字符）多次，那么我们可以考虑从后往前复制，这样就能减少移动的次数，从而提高效率。
 - 从尾到头打印链表：
   1. 使用栈解构，遍历链表挨个入栈，再出栈打印每个元素
