--- a/Frontend-learning/复习/一些补充知识点.md
+++ b/Frontend-learning/复习/一些补充知识点.md
@@ -2,7 +2,7 @@
 
 ## [你可能不知道的浏览器实时通信方案](https://segmentfault.com/a/1190000019697463)
 
-- `WebSocket`：现代化的长连接方案，高效易用。首次建立连接会借助 `HTTP` 协议，携带 `Upgrade: websocket` 和 `Connection: Upgrade` 以及一些 WebSocket 相关的头部，服务端也会响应 `Upgrade: websocket` 和 `Connection: Upgrade` 以及 websocket 特有头部字段。
+- `WebSocket`：现代化的长连接方案，高效易用。首次建立连接会借助 `HTTP` 协议，携带 `Connection: Upgrade` 和 `Upgrade: websocket` 以及一些 WebSocket 相关的头部，服务端也会响应状态 `101 Switching Protocols` 和 `Connection: Upgrade` 和 `Upgrade: websocket` 以及 websocket 特有头部字段。
 - `XHR-streaming`：
   - 在 HTTP1.0 时，响应是必须作为一整块数据返回客户端的，这要求服务端在发送响应之前必须设置 `Content-Length`, 浏览器知道数据的大小后才能确定响应的结束时间。这让服务器响应动态的内容变得非常低效，它必须等待所有动态内容生成完，再计算 `Content-Length`, 才可以发送给客户端。如果响应的内容体积很大，需要占用很多内存空间。`HTTP/1.1` 引入了 **`Transfer-Encoding: chunked;`** 报头。 它允许服务器发送给客户端应用的数据可以分为多个部分, 并以一个或多个块发送，这样服务器可以发送数据而不需要提前计算发送内容的总大小。 有了分块传输机制后，动态生成内容的服务器就可以维持 HTTP 长连接, 也就是说服务器响应流不结束，TCP 连接就不会断开，即使处于 Pending 状态客户端还是可以接收数据。
 - `EventSource`：类似于浏览器标准化后的 `XHR-streaming`，其 `Accept` 为 `text/event-stream`
