--- a/面试/问题.md
+++ b/面试/问题.md
@@ -49,3 +49,7 @@
 ### HR 问： 为什么你觉得你能拿这么多钱？
 
 这个问题不在于我觉得我能拿到这么多钱，而在于我能为公司带来多少价值。从过往的经验来看，我的技术足以对公司内部大部分员工进行前端知识的培训，提升公司前端团队整体水平，并且我还能编写很多办公工具，大幅提升了整个前端团队的办事效率，从而让前端团队每个人都能有更高的输出，带来的收益远不止我能拿到的这点钱。我想在前面的面试过程中，面试官也能感受到我的这部分价值，所以我希望能拿到 xxx
+
+### 作为技术负责人，你觉得和普通开发最大的区别是什么
+
+沟通和协调。在日常开发中，需要兼顾整个产品的人员分工和协调，与产品经理进行有效的沟通并把沟通结果传达给团队其它成员，还要把控开发周期、产品质量等。
