--- a/Frontend-learning/webpack/经验总结.md
+++ b/Frontend-learning/webpack/经验总结.md
@@ -4,5 +4,18 @@
 
 - 使用 webpack 服务器转发或与服务器绑定
   - devServer.proxy 进行请求代理
-  - devServer.before() 中编写服务器代码（devServer 默认使用 express） 
+  - devServer.before() 中编写服务器代码（devServer 默认使用 express）
   - 使用 [webpack-dev-middleware](https://www.npmjs.com/package/webpack-dev-middleware) 插件，它能够通过 server 编译项目，参考 https://webpack.js.org/guides/development/#using-webpack-dev-middleware
+
+---
+
+### 常用配置
+
+`webpack5`可以使用资源模块来帮助我们，称之为 Asset Modules，它允许我们打包其他资源类型，比如`字体文件`、`图表文件`、`图片文件`等。
+
+其中，资源模块类型我们称之为 Asset Modules Type，总共有四种，来代替 loader，分别是：
+
+- `asset/resource`：发送一个单独的文件并导出 URL，替代 `file-loader`
+- `asset/inline`：导出一个资源的 data URI，替代 `url-loader`
+- `asset/source`：导出资源的源代码，之前通过使用 `raw-loader` 实现
+- `asset`：介于 asset/resource 和 asset/inline 之间，在导出一个资源 data URI 和发送一个单独的文件并导出 URL 之间做选择，之前通过 `url-loader+limit` 属性实现。
