--- a/Frontend-learning/复习/复习专题/大文件上传.md
+++ b/Frontend-learning/复习/复习专题/大文件上传.md
@@ -1,5 +1,17 @@
 # 大文件上传解决方案
 
+- `File` 对象继承自 `Blob` 对象，因此可以使用 `Blob` 实例的 `slice` 方法对文件内容进行分片，按照设定的大小分成多片同步上传。
+- 服务端合并分片的时候可以通过 `createWriteStream` 指定写入的起始点，如
+
+```js
+// 服务端合并分片可以通过 start 指定当前分片在写入文件的对应起点位置
+fs.createWriteStream(filePath, {
+  start: index * size,
+});
+```
+
+- 进度条的显示可以通过监听 XMLHttpRequest 实例上的 `upload.onprogress` 即可
+
 参考资料：
 
 - [字节跳动面试官：请你实现一个大文件上传和断点续传](https://juejin.cn/post/6844904046436843527)
