--- a/面试/前端.md
+++ b/面试/前端.md
@@ -2,3 +2,54 @@
 
 ## 前端基建包含哪些内容
 
+工程化：
+
+- 添加 husky 执行 git hooks，保证校验通过
+- CI/CD
+
+## 如何构建前端知识体系
+
+前端知识体系分为：
+
+- 基础技能相关，（要求：不要求配置项目，能达到熟练使用、满足日常开发使用即可），举例：
+  - bind、call、apply
+  - 正则表达式
+  - 浅拷贝、深拷贝等
+  - Vue、React 框架基本使用
+  - CSS 动画等
+- 进阶技能相关（要求：除了能熟练使用，还需要了解其底层原理）
+  - 事件循环
+  - nodejs 相关
+  - 浏览器渲染原理
+  - 常用框架实现原理
+  - webpack 相关
+  - 常用设计模式
+  - 数据结构、算法
+  - CSRF
+- 安全相关
+  - CSRF 及其防御
+  - XSS 及其防御
+- 性能优化相关
+  - 强、弱缓存
+  - webpack 优化相关
+- 扩展技能
+  - TCP/IP 网络模型
+  - HTTP、HTTPS 握手
+- 面向未来，新技术探索（抛砖引玉）
+  - PWA
+  - Flutter
+  - WebAssembly
+  - WebContainer
+  - WebGL
+  - 跨端等
+
+## 前端规范制定
+
+- 开发规范
+  - 代码分支：`master` 线上稳定分支，从 `master` 拉取版本分，例如 `v1.0`，从版本分支 `v1.0` 切出 `dev` 开发分支，所有开发当前版本的人员应该从 `dev` 分支切出个人开发分支，在个人分支上开发，完成后提交到 `dev` 分支
+  - 需要满足 ESLint、TSLint 以及框架自己推荐的规范，包括代码缩进等（否则格式化后整个代码都算作提交内容）
+  - 满足 git hooks 条件（例如项目添加了 husky 等）
+  - 组件开发原则
+    - 满足通用性
+    - 单一任务原则
+    - 封装原则：即不应该暴露实现细节，组件数据不能放到 vuex 或者 redux 全局状态中管理。
