--- a/Frontend-learning/Typescript/复习/类型.md
+++ b/Frontend-learning/Typescript/复习/类型.md
@@ -12,6 +12,27 @@ type A<T> = {
 };
 ```
 
+```ts
+// 通常情况下，interface 和 type 可以互换，如何选择取决于你自己
+// 接口可多次声明，会自动合并，但 type 声明的类型无法重复定义
+// 接口可以通过 extends 进行扩展，type 可以使用 & 进行扩展
+interface Goods {
+    name: string
+}
+
+interface Goods {
+    price: number
+}
+
+type OtherGoods = {
+    name: string
+}
+
+type AnotherGoods = OtherGoods & { // 通过 & 扩展 type 定义的类型
+    price: number
+}
+```
+
 ---
 
 - 索引访问类型：在类型上进行索引，返回的也是类型
