--- a/面试/问题.md
+++ b/面试/问题.md
@@ -53,3 +53,36 @@
 ### 作为技术负责人，你觉得和普通开发最大的区别是什么
 
 沟通和协调。在日常开发中，需要兼顾整个产品的人员分工和协调，与产品经理进行有效的沟通并把沟通结果传达给团队其它成员，还要把控开发周期、产品质量等。
+
+---
+
+### 3L 桶和 5L 桶怎么得到 4L 水（思维题，遇到 2 次了，一次腾讯一次大疆）
+
+首先思考如何获得 `4`：
+
+- `4 = 5 - 1`
+- `4 = 3 + 1`
+- `4 = 2 + 2`
+
+#### `5 - 1`
+
+`5 - 1` 的重点在于 5 是现成的，如何获取 1 ？
+
+- 装满 5L 桶，倒满 3L 桶，余下 2L，倒干 3L 桶，将 2L 倒入 3L 桶保存，此时 3L 桶内装有 2L 水，即余下 1L 的空间，即得到了表达式中的 1
+- 再将 5L 桶装满，倒入 3L 桶，当 3L 桶装满时，说明从 5L 桶倒入了 1L 水，因此达成了 5 - 1 得到 4L 水。
+
+#### `3 + 1`
+
+3 有现成的，同样是如何获得 1 的问题，由于是 +1 而非 -1，因此有所差别
+
+观察可以发现，`3 * 2 - 5 = 1`，因此我们可以：
+
+- 装满 3L 桶，全部倒入 5L 桶，此时 5L 桶内装有 3L 水
+- 再装满 3L 桶，将 5L 桶倒满，此时 3L 桶剩余 1L 水，倒完 5L 桶，将 1L 水保存到 5L 桶中，此时 5L 桶装有 1L 水
+- 再装满 3L 桶，倒入 5L 桶内，即得到 4L 水，即 1 + 3 = 4
+
+#### `2 + 2`
+
+该方式不可行，因为前两种方式的表达式中有现成的桶可以满足，因此需要一个桶保存中间变量即可。
+
+但是 `2 + 2` 的方式不可行，因为没有 2L 的桶，任意水桶保存了 2L 之后，另外一个桶无法独自得到 2L 水。
