--- a/Frontend-learning/Typescript/复习/类型.md
+++ b/Frontend-learning/Typescript/复习/类型.md
@@ -17,20 +17,21 @@ type A<T> = {
 // 接口可多次声明，会自动合并，但 type 声明的类型无法重复定义
 // 接口可以通过 extends 进行扩展，type 可以使用 & 进行扩展
 interface Goods {
-    name: string
+  name: string;
 }
 
 interface Goods {
-    price: number
+  price: number;
 }
 
 type OtherGoods = {
-    name: string
-}
+  name: string;
+};
 
-type AnotherGoods = OtherGoods & { // 通过 & 扩展 type 定义的类型
-    price: number
-}
+type AnotherGoods = OtherGoods & {
+  // 通过 & 扩展 type 定义的类型
+  price: number;
+};
 ```
 
 ---
@@ -122,7 +123,7 @@ declare function stringOrNum(x: string | number): string | number;
 type T1 = ReturnType<typeof stringOrNum>; // string | number
 ```
 
-- 条件类型做类型分发：联合类型会分发到每一项去执行
+- 条件类型做类型分发（类似于乘法分配律）：联合类型会分发到每一项去执行
 
 ```ts
 type ToArray<Type> = Type extends any ? Type[] : never;
