--- a/Frontend-learning/复习/零散的小知识点.md
+++ b/Frontend-learning/复习/零散的小知识点.md
@@ -4,6 +4,11 @@
 
 - 图片懒加载：https://juejin.cn/post/6844904021308735502#heading-46
 
+  - 另外还有 img 标签自带的 `loading="lazy"`（iframe 标签也可以使用该属性） 方式实现更快捷的懒加载，默认值为 `eager` 表示立即加载。
+
+- [为什么 React 的 Diff 算法不采用 Vue 的双端对比算法？](https://juejin.cn/post/7116141318853623839)
+  - 阐述了为什么 Vue 不使用 fiber
+
 ---
 
 - 正则表达式
