--- a/Frontend-learning/复习/零散知识点.md
+++ b/Frontend-learning/复习/零散知识点.md
@@ -506,6 +506,7 @@ _**只有可见内容会被构建到渲染树中**_，通常 `head` 中并不包
 参考资料：
 
 - [Critical rendering path(关键渲染路径) —— MDN](https://developer.mozilla.org/en-US/docs/Web/Performance/Critical_rendering_path)
+- [性能优化之关键渲染路径](https://juejin.cn/post/7116435880587296781)
 
 ---
 
@@ -549,9 +550,25 @@ _**只有可见内容会被构建到渲染树中**_，通常 `head` 中并不包
   - 最佳实践：在构造函数中初始化好对应的字段，从而让实例具有相同的模式，不在使用对应字段时将其置为 `null` 而不是使用 `delete` 删除字段，从而让多个实例共享相同的`隐藏类`
 - 静态内存分配：频繁创建对象然后很快对象又超出作用域从而被回收的这种情况很容易被垃圾回收机制盯上！如果被它盯上了它可能会频繁的跑来进行垃圾回收，因此可以使用类似于`对象池`之类的测量，即先创建一些对象然后再需要的时候进行复用。另外由于 JavaScript 数组是可变大小的，`push` 类似的操作可能会导致移除以前的数组进行重新分配内存，因此最开始分配一个固定够用的数组也会比较好。（该方式是一种优化的极端手段，大多数情况属于过早优化，一般不用考虑）
 
+### 监控对象销毁
+
+`FinalizationRegistry` 是 ES2021 引入的新对象，它可以让你在对象被垃圾回收时请求一个回调
+
+```js
+const registry = new FinalizationRegistry((heldValue) => {
+  console.log(heldValue); // foo被销毁了
+});
+
+let foo = { bar: 0 };
+registry.register(foo, "foo被销毁了");
+
+foo = null;
+```
+
 参考资料：
 
 - [如何分析 Node.js 中的内存泄漏](https://zhuanlan.zhihu.com/p/25736931)
+- [JS 进阶 | 内存回收机制 GC](https://juejin.cn/post/7116443316094238751)
 
 ---
 
