--- a/面试/问题.md
+++ b/面试/问题.md
@@ -42,6 +42,11 @@
 - 是否容易上手
 - 运维成本
 
+### 作为前端架构师，你能为我们公司带来什么?
+
+- 稳定的线上系统
+- 制定良好的开发规范、培养技术优秀的前端团队
+
 ### 你当时做项目最大的挑战是什么
 
 - 短时间内需要将团队整体技术拉平：团队成员技术差距较大，为了加快产品迭代的效率，提升整个团队的整体水平，短时间内经常对团队技术成员进行知识分享、集体 code review 等，但时间太紧，挑战依旧很大。
