--- a/Frontend-learning/PWA/复习.md
+++ b/Frontend-learning/PWA/复习.md
@@ -196,3 +196,4 @@ self.addEventListener("activate", function (event) {
 参考资料：
 
 - [如何优雅的为 PWA 注册 Service Worker](https://zhuanlan.zhihu.com/p/28161855)
+- [PWA 应用实战](https://www.wenjiangs.com/doc/u53xlr5n)
