--- a/Frontend-learning/Typescript/复习/测试.md
+++ b/Frontend-learning/Typescript/复习/测试.md
@@ -192,3 +192,52 @@ if (box.hasValue()) {
 ```
 
 ---
+
+- 工厂函数创建实例
+
+```ts
+class Base {
+  name = "base";
+}
+
+class A extends Base {
+  age = 10;
+}
+
+// 使用 typeof Base 将限制 ctor 的实例只能是 Base
+function create1(ctor: typeof Base) {
+  // 如果 Base 为抽象类，则会报错
+  return new ctor();
+}
+
+// 创建出来依然是 Base 类型
+function create2(ctor: new () => Base) {
+  return new ctor();
+}
+
+function create3<T extends Base>(ctor: new () => T): T {
+  const ins = new ctor();
+  return ins;
+}
+let a1 = create1(A); // a1 类型为 Base
+let a2 = create2(A); // a2 类型为 Base
+let a3 = create3(A); // a3 类型为 A
+```
+
+---
+
+- 鸭子类型：看起来像鸭子就是鸭子，也就是说两个结构看起来一样就可以，只要能满足对应的类型就可以。
+
+```ts
+class A {
+  content = "";
+}
+
+class B {
+  content = "";
+  say() {}
+}
+
+// 鸭子类型
+const a: A = new B(); // 但是不能写成 const b = new A()，因为 A 没有 say 方法
+```
