--- a/面试/谈薪.md
+++ b/面试/谈薪.md
@@ -21,3 +21,7 @@ N 股期权，贵司是否提供类似的期权？
 参考资料：
 
 - [程序员跳槽时，如何优雅地谈薪水？](https://gitbook.cn/books/5a951e93ba2cd224ba9480a7/index.html)
+
+### 您的期望薪资是多少（如果是非 HR 环节聊到工资，则尽量避免直接说具体的期望值）
+
+相信贵公司有一个完善的薪酬体系，希望公司能够根据我的面试评价和职位给到我一个合理的薪酬。另外我认为单纯的薪资并不能代表一切，主要还需要看公司的晋升渠道、其它福利等。
