--- a/面试/问题.md
+++ b/面试/问题.md
@@ -1,5 +1,14 @@
 # 面试问题
 
+### 你是否还有什么问题需要问我的？
+
+分情况，一般 Hr 不会这么问，所以排除 HR 这一面。
+
+- 如果我加入团队，您 **`对我的期望是什么`**，希望我解决什么问题。
+- 如果我加入团队，**`我需要准备一些什么`**，可以是技能也可以是其它方面
+- 对于本次面试，希望您能对我的表现提一些 **`建议或意见`**，让我认识到自己的不足以便更好的改进
+- 介绍一下 **`团队情况`** 以及 **`发展方向`**
+
 ### 你觉得自己有哪些方面不足
 
 可以说非核心技术，然后准备反转，表明自己已经意识到问题，正在改变，如
